k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix-vnext
  labels:
    name: phoenix-vnext
    monitoring: enabled
